--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   device_preview: ^1.2.0
   flutter_screenutil: ^5.9.3
-  flutter_native_splash: ^2.4.4
+  flutter_native_splash: 
   flutter_typeahead: ^5.2.0
   # libphonenumber: ^2.0.2
 
